--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
   "require": {
     "php": ">=7.2.0",
     "offsite-solutions/eisodos": "@dev",
-    "pear-pear.php.net/mdb2": "2.5.0-beta5@beta"
+    "pear/mdb2": "2.5.0-beta5@beta"
   },
   "require-dev": {
   },
