- ORACLE OCI8 native connector with CLOB support (rowid, cursor is not yet supported) - OCI8 test script

--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,18 @@
       }
     },
     {
+      "type": "composer",
+      "url": "https://plugins.roundcube.net"
+    },
+    {
       "type": "pear",
       "url": "https://pear.php.net"
     }
   ],
   "require": {
     "php": ">=7.2.0",
-    "offsite-solutions/eisodos": "@dev"
+    "offsite-solutions/eisodos": "@dev",
+    "pear/mdb2": "2.5.0-beta5@beta"
   },
   "require-dev": {
   },
